--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
-    "deploy": "node deploy.sh"
+    "deploy": "node deploy.js"
   },
   "dependencies": {
     "vue": "^3.0.5"
