--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "deploy": "node deploy.js"
   },
   "dependencies": {
+    "@heroicons/vue": "^1.0.3",
     "vue": "^3.0.5"
   },
   "devDependencies": {
