feat: add better help

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
-    "deploy": "node deploy.js"
+    "deploy": "npm run build && node deploy.js"
   },
   "dependencies": {
     "@heroicons/vue": "^1.0.3",
